# TeacherBot

./: .env.example  .gitignore  PROGRESS.md  README.md  bot.py  config.py  docker-compose.yml  main.py  models.py  providers.py  pyproject.toml  repository.py
admin/: main.py  routes.py  schemas.py
admin/frontend/: README.md  index.html
admin/frontend/src/: App.tsx  index.css
admin/frontend/src/api/: client.ts  types.ts
admin/frontend/src/components/: StatusBadge.module.css  StatusBadge.tsx
admin/frontend/src/pages/: UserDetailPage.module.css  UserDetailPage.tsx  UsersListPage.module.css  UsersListPage.tsx
alembic/: env.py
alembic/versions/: 27a6a3688046_create_users_and_messages_tables.py  29bf0b997e55_add_timezone_to_timestamp_columns.py
bot/: handlers.py  main.py  prompts.py
common/: models.py  repository.py
common/repository/: messages.py  users.py
config/: __init__.py  database.py  settings.py
