[project]
name = "teacherbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiogram (>=3.29.1,<4.0.0)",
    "anthropic (>=0.116.0,<0.117.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false