[project]
name = "teacherbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiogram (>=3.29.1,<4.0.0)",
    "anthropic (>=0.116.0,<0.117.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "google-genai (>=2.11.0,<3.0.0)",
    "mistralai (>=2.6.0,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "fastapi (>=0.139.2,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false